--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset=" UTF-8 ">
     <meta http-equiv="X-UA-Compatible " content="IE=edge ">
     <meta name="viewport " content="width=device-width, initial-scale=1.0 ">
+
     <title> Clase Boostrap </title>
 
     <!-- Boostrap -->
@@ -14,7 +15,7 @@
 <body>
     <h1>Clase BOOSTRAP</h1>
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+    <div id="carouselExampleIndicators" class="carousel slide fluid" data-bs-ride="true">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -22,13 +23,25 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="../../assets/c92-2.jpg" class="d-block w-100" alt="..." style="height:18rem">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
             </div>
             <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="../../assets/jwebb-space.png" class="d-block w-100" alt="..." style="height:18rem">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
             </div>
             <div class="carousel-item">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="../../assets/pia22486_orig.png" class="d-block w-100" alt="..." style="height:18rem">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Third slide label</h5>
+                    <p>Some representative placeholder content for the third slide.</p>
+                </div>
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
