--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
-    <h1>Clase BOOSTRAP</h1>
+    <header>
+        <div class="shadow-none p-3 mb-5 bg-light rounded">Clase BOOSTRAP</div>
+        <h1></h1>
+    </header>
+
 
     <div id="carouselExampleIndicators" class="carousel slide fluid" data-bs-ride="true">
         <div class="carousel-indicators">
@@ -25,8 +29,8 @@
             <div class="carousel-item active">
                 <img src="../../assets/c92-2.jpg" class="d-block w-100" alt="..." style="height:18rem">
                 <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
+                    <h5> The Carina Nebula's 'Mystic Mountain'</h5>
+                    <p>Within the tempestuous Carina Nebula lies “Mystic Mountain.” This three-light-year-tall cosmic pinnacle, imaged by Hubble in 2010.</p>
                 </div>
             </div>
             <div class="carousel-item">
